@@ -7,11 +7,14 @@
 #
 from pyparsing import Word, delimitedList, Optional, \
     Group, alphas, alphanums, Forward, oneOf, quotedString, \
+    infixNotation, opAssoc, \
     ZeroOrMore, restOfLine, CaselessKeyword, pyparsing_common as ppc
 
 # define SQL tokens
 selectStmt = Forward()
-SELECT, FROM, WHERE = map(CaselessKeyword, "select from where".split())
+SELECT, FROM, WHERE, AND, OR, IN, IS, NOT, NULL = map(CaselessKeyword, 
+    "select from where and or in is not null".split())
+NOT_NULL = NOT + NULL
 
 ident          = Word( alphas, alphanums + "_$" ).setName("identifier")
 columnName     = delimitedList(ident, ".", combine=True).setName("column name")
@@ -21,9 +24,6 @@ tableName      = delimitedList(ident, ".", combine=True).setName("table name")
 tableName.addParseAction(ppc.upcaseTokens)
 tableNameList  = Group(delimitedList(tableName))
 
-whereExpression = Forward()
-and_, or_, in_ = map(CaselessKeyword, "and or in".split())
-
 binop = oneOf("= != < > >= <= eq ne lt le gt ge", caseless=True)
 realNum = ppc.real()
 intNum = ppc.signed_integer()
@@ -31,11 +31,17 @@ intNum = ppc.signed_integer()
 columnRval = realNum | intNum | quotedString | columnName # need to add support for alg expressions
 whereCondition = Group(
     ( columnName + binop + columnRval ) |
-    ( columnName + in_ + "(" + delimitedList( columnRval ) + ")" ) |
-    ( columnName + in_ + "(" + selectStmt + ")" ) |
-    ( "(" + whereExpression + ")" )
+    ( columnName + IN + Group("(" + delimitedList( columnRval ) + ")" )) |
+    ( columnName + IN + Group("(" + selectStmt + ")" )) |
+    ( columnName + IS + (NULL | NOT_NULL))
     )
-whereExpression << whereCondition + ZeroOrMore( ( and_ | or_ ) + whereExpression )
+
+whereExpression = infixNotation(whereCondition,
+    [
+        (NOT, 1, opAssoc.RIGHT),
+        (AND, 2, opAssoc.LEFT),
+        (OR, 2, opAssoc.LEFT),
+    ])
 
 # define the grammar
 selectStmt <<= (SELECT + ('*' | columnNameList)("columns") +
@@ -85,4 +91,5 @@ if __name__ == "__main__":
         Select A from Sys.dual where a in ('RED','GREEN','BLUE') and b in (10,20,30)
 
         # where clause with comparison operator
-        Select A,b from table1,table2 where table1.id eq table2.id""")
+        Select A,b from table1,table2 where table1.id eq table2.id
+        """)
